syntax = "proto3";

package users;

option go_package = "./";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string name = 2;
  int64 telegram_id = 3;
//  string title = 3;
//  string body = 4;
//  google.protobuf.Timestamp created_at = 5;
//  int64 status = 6;
}

message Tutor {
  User user = 1;
  string bio = 2;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateResponse);
  rpc GetUserById(GetById) returns (User);
  rpc GetTutorById(GetById) returns (Tutor);
  rpc GetStudentById(GetById) returns (User);
  rpc GetUserByTelegramId(GetByTelegramId) returns (User);
  rpc GetAllUsers(GetAllRequest) returns (GetAllResponse);
  rpc UpdateBioTutor(UpdateBioRequest) returns (UpdateBioResponse);
}

message UpdateBioRequest {
  string id = 1;
  string bio = 2;
}

message CreateUserRequest {
  int64 telegram_id = 1;
  string name = 2;
  string role = 3;
}

message CreateResponse {
  string id = 1;
}

message GetByTelegramId {
  int64 id = 1;
}

message GetById {
  string id = 1;
}

message GetStudentById {
  string id = 1;
}

message GetAllRequest {

}

message GetAllResponse {
  repeated User users = 1;
}

message UpdateBioResponse {
  bool success = 1;
}